<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffe25"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/regId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#ff0000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/publisRegId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:enabled="false"
        android:onClick="publisRegId"
        android:text="@string/publisRegId"
        android:textSize="24sp" />

    <Button
        android:id="@+id/newContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:enabled="false"
        android:onClick="newContact"
        android:text="@string/newContact"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

</LinearLayout>